# redis-web

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.dev.yml  docker-compose.external-redis.yml  docker-compose.prod.yml  docker-compose.rdb.yml  docker-compose.ssl.yml  pr_body.txt  redis-web.json  redis-web.min.json  redis-web.prod.json  redis-web.schema.json
.github/: rename-webdis-allowlist.txt
.github/workflows/: build-and-push.yml  build.yml  changelog.yml  pages-astro.yml  publish-crates.yml  redis-web-ci.json  reusable-build.yml
crates/redis-web/: CHANGELOG.md  Cargo.toml
crates/redis-web-compat/: CHANGELOG.md  Cargo.toml
crates/redis-web-core/: CHANGELOG.md  Cargo.toml
crates/redis-web-hiredis-compat/: README.md  build.rs
crates/redis-web-runtime/: CHANGELOG.md  Cargo.toml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.external-redis.yml  docker-compose.prod.yml  docker-compose.rdb.yml  docker-compose.ssl.yml
docs/: README.md  astro.config.mjs  library-embedding.md  package-lock.json  package.json
docs/embedding/: README.md  interface-reference.md  read-only-policy-executor.md  sidecar-axum.md  stub-executor-testing.md  tenant-aware-parser.md
docs/src/: content.config.ts
scripts/: build-hiredis-compat.sh  check-webdis-references.sh  compose-smoke.sh  generate-certs.sh  start-redis-web.sh  start-webdis.sh  validate-image.sh
src/: config.rs  handler.rs  lib.rs  main.rs  pubsub.rs  redis.rs  resp.rs  websocket.rs
subprojects/redispy-hiredis-compat/: USAGE.md
tests/: README.md  config_test.rs  handler_test.rs  integration_test.rs  websocket_raw_test.rs
(+67 files in other folders)
