[workspace]
default-members = [
    "crates/redis-web-core",
    "crates/redis-web-runtime",
    "crates/redis-web-compat",
    "crates/redis-web",
]
members = [
    "crates/redis-web-core",
    "crates/redis-web-runtime",
    "crates/redis-web-compat",
    "crates/redis-web-hiredis-compat",
    "crates/redis-web",
    "crates/redis-web-bench",
]
resolver = "2"
